Bug 238690 - Thumbnails above 5Mb not displayed on directory icon; no GUI to control this
Summary: Thumbnails above 5Mb not displayed on directory icon; no GUI to control this
Status: RESOLVED FIXED
Alias: None
Product: kio-extras
Classification: Frameworks and Libraries
Component: Thumbnails and previews (other bugs)
Version First Reported In: 18.04.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: junior-jobs, usability
: 394269 395456 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-24 16:41 UTC by AvelHeol
Modified: 2018-10-10 13:59 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 18.12.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description AvelHeol 2010-05-24 16:41:09 UTC
Version:           4.4.0 (using KDE 4.4.3) 
OS:                Linux

video thumbnails are not displayed, by konqueror nor dolphin, on directory icons on kubuntu x64 karmic and lucid (kde 4.3 or kde 4.4 using ext4 file system), using mplayerthumbs or kffmpegthumbnailer. It works for pictures, images and photos.

Reproducible: Always

Steps to Reproduce:
rarely works when creating a new directory on an external fat32 disk. disapear after unmount an remount.



OS: Linux (x86_64) release 2.6.32-22-generic
Compiler: cc
Comment 1 André Fettouhi 2010-12-04 17:10:49 UTC
I have the same issue on Arch Linux 64 bit with the latest KDE 4.5.4. I can't video thumbnails to appear on folders at all. The thumbnails of the video files themselves are generate fine and show up as expected.
Comment 2 Dawit Alemayehu 2011-11-17 01:35:30 UTC
since file management is handled by a dolphin kpart in konqueror, this bug ticket needs to be opened against dolphin's part.
Comment 3 David 2012-05-19 10:50:42 UTC
I do have this bug in my kubuntu 12.04 x86_64 (3.2.0-24-generic), kde 4.8.3, it used to work in opensuse 12.1
Comment 4 Jekyll Wu 2012-08-30 13:22:14 UTC
Does it ever work ? Should this report be set as wishlist ?
Comment 5 André Fettouhi 2012-08-30 13:30:20 UTC
This does work and has since KDE SC 4.6, when it was finally fixed.
Comment 6 Grigoriadis Grigoris 2012-10-27 20:13:28 UTC
Tested it with KDE 4.6.2 and 4.9.2 (with ffmpegthumbnailer and kffmpegthumbnailer) and it doesn't work (video thumbnails are successfully generated but the folder thumbnail doesn't contain the video thumbnails), so it seems that this was never implemented.
Comment 8 Frank Reininghaus 2013-07-17 14:38:36 UTC
Is this still an issue in KDE 4.10.5 or later?

In any case, this is not a Dolphin issue. The directory preview images are generated by the thumbnailers in kde-runtime.
Comment 9 André Fettouhi 2013-07-17 15:01:54 UTC
Works for me on Arch Linux 64 bit with KDE 4.10.5 using mplayerthumbs.
Comment 10 Christoph Feck 2013-08-10 21:06:46 UTC
The other video thumbnailer in KDE is ffmpegthumbs. While it requires linking to ffmpeg libraries (which mplayerthumbs elegantly avoids by calling the external binary), I found it to be faster and more reliable.

To make both mplayerthumbs and ffmpegthumbs show previews on folders, you have to make sure they are allowed in .kde/share/config/kdeglobals:

    [PreviewSettings]
    MaximumSize=1200000000
    Plugins=imagethumbnail,jpegthumbnail,videopreview,ffmpegthumbs

"videopreview" is for mplayerthumbs.
Comment 11 Christoph Feck 2013-08-10 21:11:06 UTC
The actual "bug" here is that in thumbnail.cpp the list of default Plugins does not include ffmpegthumbs, but only videopreview. The default size limit of 5 MB might be intended.
Comment 12 Rog131 2016-08-21 14:07:41 UTC
(In reply to Christoph Feck from comment #10)
> The other video thumbnailer in KDE is ffmpegthumbs. While it requires
> linking to ffmpeg libraries (which mplayerthumbs elegantly avoids by calling
> the external binary), I found it to be faster and more reliable.
> 
> To make both mplayerthumbs and ffmpegthumbs show previews on folders, you
> have to make sure they are allowed in .kde/share/config/kdeglobals:
> 
>     [PreviewSettings]
>     MaximumSize=1200000000
>     Plugins=imagethumbnail,jpegthumbnail,videopreview,ffmpegthumbs
> 
> "videopreview" is for mplayerthumbs.

This workaround is still working with the 
Dolphin & kio-extras 16.08.0
KF 5.25.0
Qt 5.7.0

More: https://www.kubuntuforums.net/showthread.php?32568-Video-Previews&p=391741&viewfull=1#post391741
Comment 13 Nate Graham 2018-04-13 22:13:33 UTC
Is this still relevant for current Kubuntu and KDE Frameworks versions?
Comment 14 André Fettouhi 2018-04-14 06:54:36 UTC
It seems to work in part now on my Arch Linux install but only on a select few video files.
Comment 15 Rog131 2018-04-14 08:49:07 UTC
Working with the Arch Linux, kio-extras: 17.12.3.

The folder/directory thumbnailer code (thumbnail.cpp) is part of the kio-extras.
-> https://cgit.kde.org/kio-extras.git/tree/thumbnail/thumbnail.cpp
Comment 16 Rog131 2018-04-14 08:58:21 UTC
(In reply to André Fettouhi from comment #14)
> It seems to work in part now on my Arch Linux install but only on a select
> few video files.

As default the kio-extras - https://cgit.kde.org/kio-extras.git/tree/thumbnail/thumbnail.cpp has line 456: 'm_maxFileSize = globalConfig.readEntry("MaximumSize", qulonglong(5 * 1024 * 1024)); // 5 MByte default'.

For the video files the 5 MByte is quite small.

By Christoph Feck - https://bugs.kde.org/show_bug.cgi?id=238690#c10 - you could add to the kdeglobals a bigger 'MaximumSize'.

With the KF5. Adding to the $HOME/.config/kdeglobals:

[PreviewSettings]
MaximumSize=52428800000

and more video files are shown, at here, on the top of the folder icon.
Comment 17 Nate Graham 2018-05-10 21:56:38 UTC
Hmm, I see video previews for all my videos without having that setting set in kdeglobals. Since the original issue is resolved, let's track the remaining issue in a new bug. Thanks all!
Comment 18 Nate Graham 2018-06-09 02:20:56 UTC
Re-opening, since we got another report in Bug 394269.
Comment 19 Nate Graham 2018-06-09 02:21:32 UTC
*** Bug 394269 has been marked as a duplicate of this bug. ***
Comment 20 Nate Graham 2018-07-20 15:10:12 UTC
*** Bug 395456 has been marked as a duplicate of this bug. ***
Comment 21 Kai Uwe Broulik 2018-10-10 13:58:42 UTC
Git commit 1b334712ed0fd2d81b4aa1478acca3bd4630948b by Kai Uwe Broulik.
Committed on 10/10/2018 at 13:58.
Pushed by broulik into branch 'master'.

Use correct MaximumSize

The maximum size for local thumbnails was raised from 5 MB to unlimited elsewhere.

Differential Revision: https://phabricator.kde.org/D15741

M  +2    -1    thumbnail/thumbnail.cpp

https://commits.kde.org/kio-extras/1b334712ed0fd2d81b4aa1478acca3bd4630948b