Use correct MaximumSize

The maximum size for local thumbnails was raised from 5 MB to unlimited elsewhere.

BUG: 238690

Differential Revision: https://phabricator.kde.org/D15741